# dumbledore-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
dumbledore_cli/: __init__.py  ai.py  cli.py  config.py  db.py  markdown.py  notes.py  projects.py  style.py
dumbledore_cli/rag/: __init__.py  chunker.py  embeddings.py  memory.py  retriever.py  vectorstore.py
