[project]
name = "dumbledore-cli"
version = "0.1.0"
description = "Personal AI advisor with RAG-powered context from Apple Notes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "questionary>=2.0.0",
]

[project.scripts]
dumbledore = "dumbledore_cli.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dumbledore_cli*"]
